--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             {% if user.is_authenticated %}
-                <h2><a href="{% url 'dashboard' %}">{{ user.username }}</a></h2>
+                <h2><img src="{% static 'image/user.png' %}" alt="user"><a href="{% url 'dashboard' %}">{{ user.username }}</a></h2>
             {% else %}
                 <h2>Our Coffee</h2>
             {% endif %}
